--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,19 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url('https://www.xtrafondos.com/wallpapers/montanas-minimalista-degradado-azul-7869.jpg');
+  background-size: cover;
+}
+
+:root::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: -1; 
 }
 
 a {
@@ -65,4 +78,11 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+#inputBuscar{
+  position: relative;
+  top: 9px;
+  left: 30px;
+  padding: 10px 50px;
 }
