--- a/src/components/TaskForm/TaskForm.css
+++ b/src/components/TaskForm/TaskForm.css
@@ -4,7 +4,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	position: absolute;
+	position: fixed;
 	left: 0;
 	z-index: 999 !important;
 	top: 0;
